Feat: 정적 생성(SSG) 구현 - 빌드 시 Notion 콘텐츠 미리 생성, 즉시 로딩

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "scripts": {
+    "build": "node scripts/build-content.js",
+    "prebuild": "mkdir -p public/data/content"
+  },
   "dependencies": {
     "@notionhq/client": "^2.2.15"
   }
