메인화면복구

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,20 @@
 {
     "rewrites": [
         {
+            "source": "/adminwonpro",
+            "destination": "/adminwonpro.html"
+        },
+        {
             "source": "/columns",
             "destination": "/columns.html"
         },
         {
-            "source": "/portfolio",
-            "destination": "/portfolio.html"
-        },
-        {
             "source": "/quote",
             "destination": "/quote.html"
+        },
+        {
+            "source": "/portfolio",
+            "destination": "/portfolio.html"
         }
     ]
 }
