--- a/vercel.json
+++ b/vercel.json
@@ -16,5 +16,34 @@
             "source": "/portfolio",
             "destination": "/portfolio.html"
         }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=3600, s-maxage=86400, stale-while-revalidate=604800"
+                }
+            ]
+        },
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, s-maxage=300, stale-while-revalidate=86400"
+                }
+            ]
+        },
+        {
+            "source": "/(.*).html",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=3600, s-maxage=86400, stale-while-revalidate=604800"
+                }
+            ]
+        }
     ]
 }
