--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "@notionhq/client": "^2.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "canvas": "^3.2.1"
   }
 }
