Fix: Bump SW version and disable HTML caching

--- a/vercel.json
+++ b/vercel.json
@@ -45,7 +45,7 @@
             "headers": [
                 {
                     "key": "Cache-Control",
-                    "value": "public, max-age=3600, s-maxage=86400, stale-while-revalidate=604800"
+                    "value": "no-cache, no-store, must-revalidate"
                 }
             ]
         }
